--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,7 +165,8 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./taiga-gateway/taiga.conf:/etc/nginx/conf.d/default.conf
+    #  - ./taiga-gateway/taiga.conf:/etc/nginx/conf.d/default.conf
+    - ./taiga-gateway/:/etc/nginx/conf.d/
       - taiga-static-data:/taiga/static
       - taiga-media-data:/taiga/media
     networks:
