--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,8 @@ services:
     restart: unless-stopped
     container_name: caddy
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
+      #- ./Caddyfile:/etc/caddy/Caddyfile
+      - ./:/etc/caddy/
       - ./certs:/certs
       - ./config:/config
       - ./data:/data
