--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     container_name: caddy
     volumes:
       #- ./Caddyfile:/etc/caddy/Caddyfile
-      - ./:/etc/caddy/
+      - ./caddy:/etc/caddy/
       - ./certs:/certs
       - ./config:/config
       - ./data:/data
