--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,18 +35,18 @@ x-volumes:
   # - ./config.py:/taiga-back/settings/config.py
 
 services:
-  #caddy:
-  #  image: caddy:alpine
-  #  restart: unless-stopped
-  #  container_name: caddy
-  #  volumes:
-  #    #- ./Caddyfile:/etc/caddy/Caddyfile
-  #    - ./caddy:/etc/caddy/
-  #    - ./certs:/certs
-  #    - ./config:/config
-  #    - ./data:/data
-  #    - ./sites:/srv
-  #  network_mode: "host"
+  caddy:
+    image: caddy:alpine
+    restart: unless-stopped
+    container_name: caddy
+    volumes:
+      #- ./Caddyfile:/etc/caddy/Caddyfile
+      - ./caddy:/etc/caddy/
+      - ./certs:/certs
+      - ./config:/config
+      - ./data:/data
+      - ./sites:/srv
+    network_mode: "host"
 
   taiga-db:
     image: postgres:12.3
